// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard should render a RepositoryCard as expected 1`] = `
<div>
  <li
    class="sc-c6d6bd61-0 fiYkvw"
    data-repo-id="42"
    data-testid="repository-card"
  >
    <div
      class="sc-c6d6bd61-1 hNhUMl"
    >
      <h2
        class="sc-c6d6bd61-3 cpSoRL"
      >
        <a
          href="https://github.com/alexbuiltit"
          rel="noreferrer"
          target="_blank"
        >
          github-trending
        </a>
      </h2>
      <span
        class="sc-1762ab62-0 eLoAgg"
      >
        TypeScript
      </span>
      <p>
        A repo to display the trending items in GitHub
      </p>
      <div
        class="sc-c6d6bd61-2 gychjE"
      >
        <p>
          Stars: 
          1
        </p>
        <button
          class="sc-37a9387a-0 jhFHWg"
          data-favourited="false"
          data-testid="favourite-button"
        >
          <span
            class="favourite-button__text"
          >
            Favourite
          </span>
          <span
            class="favourite-button__icon"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 24 22"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5308 3.60795L12.0001 4.88174L12.4692 3.60789C13.3602 1.18839 16.0684 0.106068 18.6509 0.62831C21.1839 1.14056 23.5 3.19824 23.5 7.00311C23.5 10.7744 20.6781 15.9886 12 21.4116C3.32188 15.9886 0.5 10.7744 0.5 7.00311C0.5 3.17441 2.81892 1.12584 5.35149 0.623033C7.93585 0.109943 10.6451 1.20372 11.5308 3.60795Z"
                stroke="black"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`RepositoryCard should render a RepositoryCard that has been favourited 1`] = `
<div>
  <li
    class="sc-c6d6bd61-0 fiYkvw"
    data-repo-id="42"
    data-testid="repository-card"
  >
    <div
      class="sc-c6d6bd61-1 hNhUMl"
    >
      <h2
        class="sc-c6d6bd61-3 cpSoRL"
      >
        <a
          href="https://github.com/alexbuiltit"
          rel="noreferrer"
          target="_blank"
        >
          github-trending
        </a>
      </h2>
      <span
        class="sc-1762ab62-0 eLoAgg"
      >
        TypeScript
      </span>
      <p>
        A repo to display the trending items in GitHub
      </p>
      <div
        class="sc-c6d6bd61-2 gychjE"
      >
        <p>
          Stars: 
          1
        </p>
        <button
          class="sc-37a9387a-0 jhFHWg"
          data-favourited="true"
          data-testid="favourite-button"
        >
          <span
            class="favourite-button__text"
          >
            Favourited
          </span>
          <span
            class="favourite-button__icon"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 24 22"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5308 3.60795L12.0001 4.88174L12.4692 3.60789C13.3602 1.18839 16.0684 0.106068 18.6509 0.62831C21.1839 1.14056 23.5 3.19824 23.5 7.00311C23.5 10.7744 20.6781 15.9886 12 21.4116C3.32188 15.9886 0.5 10.7744 0.5 7.00311C0.5 3.17441 2.81892 1.12584 5.35149 0.623033C7.93585 0.109943 10.6451 1.20372 11.5308 3.60795Z"
                stroke="black"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;
